--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Office Feedback</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
   </head>
   <body>
       <!--Navigation bar!-->
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
       <a id="logo-wrapper" href="index.html">
-        <img src="images/full.png" alt="">
+        <img src="../images/full.png" alt="">
         <span>Student Ambassadors</span>
       </a>
 
       <div class="pages">
-        <a href="index.html"><li>Home</li></a>
-        <a href="./pages/extensions.html"><li>Extensions</li></a>
-        <a href="./pages/counselormap.html"><li>Counselor Map</li></a>
+        <a href="../index.html"><li>Home</li></a>
+        <a href="./extensions.html"><li>Extensions</li></a>
+        <a href="./counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
 
@@ -30,7 +30,7 @@
       <div class="links">
         <a href="https://goo.gl/forms/lvfIohj0zyfdbyz23">
           <div class="icon-update" id="conor_feedback">
-            <img style="height: 60px; width: auto;" src="images/asana.png" alt=""> <br>
+            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
             <span style="font-size: 20px;">Conor</span>
           </div>
         </a>
@@ -55,7 +55,7 @@
     </div>
     <footer>
       <div id="champlain">
-        <img src="images/shield_color.png" alt=""/>
+        <img src="../images/shield_color.png" alt=""/>
         <span>LET US DARE</span>
       </div>
       <span id="footer-background"></span>
