--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -36,19 +36,19 @@
         </a>
         <a href="https://goo.gl/forms/twE6ZhUQlfAdwTnY2">
           <div class="icon" id="dylan_feedback">
-            <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
+            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
             <span>Dylan</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/o79wpVm0tltqHnLl2">
           <div class="icon" id="julia_feedback">
-            <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
+            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
             <span>Julia</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/7BgyHmxAlZ2SeSyJ3">
           <div class="icon" id="maddie_feedback">
-            <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
             <span>Maddie</span>
           </div>
         </a>
