--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -30,26 +30,26 @@
       <div class="links">
         <a href="https://goo.gl/forms/lvfIohj0zyfdbyz23">
           <div class="icon-update" id="conor_feedback">
-            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
-            <span style="font-size: 20px;">Conor</span>
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 18px;">Current Students</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/twE6ZhUQlfAdwTnY2">
-          <div class="icon" id="dylan_feedback">
-            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
-            <span>Dylan</span>
+          <div class="icon-update" id="dylan_feedback">
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 18px;">dylan</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/o79wpVm0tltqHnLl2">
-          <div class="icon" id="julia_feedback">
-            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
-            <span>Julia</span>
+          <div class="icon-update" id="julia_feedback">
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 18px;">Julia</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/7BgyHmxAlZ2SeSyJ3">
-          <div class="icon" id="maddie_feedback">
-            <img style="height: 60px; width: auto;" src="../images/asana.png" alt=""> <br>
-            <span>Maddie</span>
+          <div class="icon-update" id="maddie_feedback">
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 18px;">Maddie</span>
           </div>
         </a>
     </div>
