--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -31,25 +31,25 @@
         <a href="https://goo.gl/forms/lvfIohj0zyfdbyz23">
           <div class="icon-update" id="conor_feedback">
             <img src="../images/shield_white.png" alt=""> <br>
-            <span style="font-size: 18px;">Current Students</span>
+            <span style="font-size: 20px;">Conor</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/twE6ZhUQlfAdwTnY2">
           <div class="icon-update" id="dylan_feedback">
             <img src="../images/shield_white.png" alt=""> <br>
-            <span style="font-size: 18px;">dylan</span>
+            <span style="font-size: 20px;">Dylan</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/o79wpVm0tltqHnLl2">
           <div class="icon-update" id="julia_feedback">
             <img src="../images/shield_white.png" alt=""> <br>
-            <span style="font-size: 18px;">Julia</span>
+            <span style="font-size: 20px;">Julia</span>
           </div>
         </a>
         <a href="https://goo.gl/forms/7BgyHmxAlZ2SeSyJ3">
           <div class="icon-update" id="maddie_feedback">
             <img src="../images/shield_white.png" alt=""> <br>
-            <span style="font-size: 18px;">Maddie</span>
+            <span style="font-size: 20px;">Maddie</span>
           </div>
         </a>
     </div>
