--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -14,7 +14,7 @@
       <!--Navigation bar!-->
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
-      <a id="logo-wrapper" href="index.html">
+      <a id="logo-wrapper" href="../index.html">
         <img src="../images/full.png" alt="">
         <span>Student Ambassadors</span>
       </a>
