--- a/pages/additional.html
+++ b/pages/additional.html
@@ -28,14 +28,14 @@
 
     <div class="wrapper">
       <div class="links">
-        <a href="https://goo.gl/forms/lvfIohj0zyfdbyz23">
-          <div class="icon-update" id="conor_feedback">
-            <img src="../images/shield_white.png" alt=""> <br>
+        <a href="https://login.salesforce.com/">
+          <div class="icon-update" id="TargetX">
+            <img src="../images/salesforce.png" alt=""> <br>
             <span style="font-size: 20px;">TargetX</span>
           </div>
         </a>
-        <a href="https://goo.gl/forms/twE6ZhUQlfAdwTnY2">
-          <div class="icon-update" id="dylan_feedback">
+        <a href="https://visit.champlain.edu/admin/dashboard">
+          <div class="icon-update" id="Dashboard_Login">
             <img src="../images/shield_white.png" alt=""> <br>
             <span style="font-size: 20px;">Dashboard</span>
           </div>
