--- a/pages/additional.html
+++ b/pages/additional.html
@@ -36,7 +36,7 @@
         </a>
         <a href="https://visit.champlain.edu/admin/dashboard">
           <div class="icon-update" id="Dashboard_Login">
-            <img src="../images/shield_white.png" alt=""> <br>
+            <img src="../images/Visit.png" alt=""> <br>
             <span style="font-size: 20px;">Dashboard</span>
           </div>
         </a>
