--- a/pages/additional.html
+++ b/pages/additional.html
@@ -30,7 +30,7 @@
       <div class="links">
         <a href="https://login.salesforce.com/">
           <div class="icon-update" id="TargetX">
-            <img src="../images/salesforce.png" alt=""> <br>
+            <img src="../images/sf.png" alt=""> <br>
             <span style="font-size: 20px;">TargetX</span>
           </div>
         </a>
