--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             <span>Office Feedback</span>
           </div>
         </a>
+         <a href="pages/additional.html">
+          <div class="icon-update" id="additional_links">
+            <img src="images/Visit.png" alt=""> <br>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
+            <span>TargetX/Dashboard</span>
+          </div>
+        </a>
       </div>
       <div class="news">
         <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
