--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="icon-update" id="additional_links">
             <img src="images/Visit.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
-            <span>TargetX/Dashboard</span>
+            <span>Other</span>
           </div>
         </a>
       </div>
