--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
           event.preventDefault();
           incognitoShake($(this));
         });
+        $("#other").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
       });
 
       var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1VPJsWRqeBW6t7xn3JphKra1LwrmyJpstcjhJz0tTyDk/pubhtml';
