--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </a>
          <a href="pages/additional.html">
-          <div class="icon-update" id="additional_links">
+          <div class="icon-update" id="other">
             <img src="images/Visit.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Other</span>
