--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Student Ambassador Homepage</title>
+    <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/feedback.html" media="screen" title="no title">
+  </head>
+  <body>
 
+    <!--Navigation bar!-->
+    <nav>
+      <!-- <img src="logo_color.png" alt="" /> -->
+      <a id="logo-wrapper" href="index.html">
+        <img src="../images/full.png" alt="">
+        <span>Student Ambassadors</span>
+      </a>
+
+      <div class="pages">
+        <a href="../index.html"><li>Home</li></a>
+        <a href="./extensions.html"><li>Extensions</li></a>
+        <a href="./phonelist.html"><li>SA Phone List</li></a>
+        <a href="./counselormap.html"><li>Counselor Map</li></a>
+      </div>
+    </nav>
+    
