--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
-    <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
-    <link rel="stylesheet" href="../styles/feedback.html" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/extensions.css" media="screen" title="no title">
   </head>
   <body>
 
