--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -22,6 +22,7 @@
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
+        <a href="./phonelist.html><li>SA Phone List</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
