--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
   </head>
