Still working on list, left off at lily

--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -47,9 +47,9 @@
             <tr><td>Jackie Noborikawa</td><td>(808)239-4329</td><tr>
             <tr><td>Jessica Taylor</td><td>(315)520-0922</td></tr>
             <tr><td>Jon Trusheim</td><td>(617)797-4568</td></tr>
+            <tr><td>Julia Leonard</td><td>(603)686-4643</td></tr>
+            <tr><td>Ollie Plamp</td><td>(210)630-9984</td></tr>
+            <tr><td></td><td>(315)520-0922</td></tr>
             <tr><td>Jessica Taylor</td><td>(315)520-0922</td></tr>
-            <tr><td>Jessica Taylor</td><td>(315)520-0922</td></tr>
-            <tr><td>Jessica Taylor</td><td>(315)520-0922</td></tr>
-            <tr><td>Jessica Taylor</td><td>(315)520-0922</td></tr>
-    
+    Jessica Taylor
   </body>
