added admin counselors and ops

--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -54,4 +54,19 @@
             <tr><td>Quinn Kanner</td><td>(321)427-8215</td></tr>
             <tr><td>Quinn Kerry</td><td>(518)928-5158</td></tr>
             <tr><td>Shelsea Henry</td><td>(857)310-8937</td></tr>
+          </table>
+        </div>
+        
+        <div class="extensionsbox">
+          <h1>Admissions Counselors & Ops</h1>
+          <table>
+            <tr><td>Dom Cornacchia</td><td>(802)922-6406</td></tr>
+            <tr><td>Howie LeBlanco</td><td>(802)399-8730</td></tr>
+            <tr><td>Leah Miller</td><td>(860)921-6787<td></tr>
+            <tr><td>Hannah Kingsley</td><td>(802)383-6646</td></tr>
+            <tr><td>Nadia Mitchell</td><td>(802)324-8775</td></tr>
+            <tr><td>Julia Caminiti</td><td>(802)922-5495</td></tr>
+            <tr><td>Almir Salkic</td><td>(802)578-9526</td></tr>
+          </table>
+        </div>
   </body>
