--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -69,4 +69,16 @@
             <tr><td>Almir Salkic</td><td>(802)578-9526</td></tr>
           </table>
         </div>
+      
+      <!-- Footer bar !-->
+    <footer>
+      <div id="champlain">
+        <img src="../images/shield_color.png" alt=""/>
+        <span>LET US DARE</span>
+      </div>
+      <span id = "footer-background"></span>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
   </body>
+</html>
