should open correctly?

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         </a>
         <a href="https://login.salesforce.com/">
           <div class="icon-update" id="TargetX">
-            <img src="../images/sf.png" alt=""> <br>
+            <img src="images/sf.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span style="font-size: 20px;">TargetX</span>
           </div>
         </a>
         <a href="https://visit.champlain.edu/admin/dashboard">
           <div class="icon-update" id="Dashboard_Login">
-            <img src="../images/Visit.png" alt=""> <br>
+            <img src="images/Visit.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span style="font-size: 20px;">Dashboard</span>
           </div>
