TargetX and Dashboard
Wouldn't open in incognito, should work now

--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
           event.preventDefault();
           incognitoShake($(this));
         });
-        $("#other").click(function(event) {
+        $("#Dashboard").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
+         $("#TargetX").click(function(event) {
           event.preventDefault();
           incognitoShake($(this));
         });
