--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           event.preventDefault();
           incognitoShake($(this));
         });
-        $("#Dashboard").click(function(event) {
+        $("#Dashboard_Login").click(function(event) {
           event.preventDefault();
           incognitoShake($(this));
         });
