Hopefully all the tabs will show up now?

--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -7,7 +7,6 @@
     <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
   </head>
@@ -23,6 +22,7 @@
 
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
+        <a href="./calendar.html"><li>Tour Schedule</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="./phonelist.html><li>SA Phone List</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
@@ -44,6 +44,9 @@
       <span id = "footer-background"></span>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="./assets/timeago.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+    <script src="./assets/tabletop.js" charset="utf-8"></script>
   </body>
 </html>
