--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -24,7 +24,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="./calendar.html"><li>Tour Schedule</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
-        <a href="./phonelist.html><li>SA Phone List</li></a>
+        <a href="./phonelist.html"><li>SA Phone List</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
