--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -21,8 +21,9 @@
 
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
+        <a href="./calendar.html"><li>Tour Schedule</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
-        <a href="./phonelist.html><li>SA Phone List</li></a>
+        <a href="./phonelist.html"><li>SA Phone List</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
@@ -178,6 +179,10 @@
       <span id = "footer-background"></span>
     </footer>
 
+    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="./assets/timeago.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+    <script src="./assets/tabletop.js" charset="utf-8"></script>
   </body>
 </html>
