--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -20,10 +20,10 @@
 
       <div class="pages">
         <a href="index.html"><li>Home</li></a>
-        <a href="./pages/calendar.html"><li>Tour Schedule</li></a>
-        <a href="./pages/extensions.html"><li>Extensions</li></a>
-        <a href="./pages/phonelist.html"><li>SA Phone List</li></a>
-        <a href="./pages/counselormap.html"><li>Counselor Map</li></a>
+        <a href="./calendar.html"><li>Tour Schedule</li></a>
+        <a href="./extensions.html"><li>Extensions</li></a>
+        <a href="./phonelist.html"><li>SA Phone List</li></a>
+        <a href="./counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
 
