--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -19,7 +19,7 @@
       </a>
 
       <div class="pages">
-        <a href="index.html"><li>Home</li></a>
+        <a href="../index.html"><li>Home</li></a>
         <a href="./calendar.html"><li>Tour Schedule</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="./phonelist.html"><li>SA Phone List</li></a>
