added champ support separate numbers

--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -138,7 +138,6 @@
             <tr><td>CPS Internal Transfers</td><td>8412</td></tr>
             <tr><td>Dining Services/Sodexo</td><td>2719</td></tr>
             <tr><td>Event Center</td><td>5957</td></tr>
-            <tr><td>Help Desk/Champ Support</td><td>2710</td></tr>
             <tr><td>InSight (Jimena Huaco)</td><td>5857</td></tr>
             <tr><td>Mail Center</td><td>2385</td></tr>
             <tr><td>Military &amp; Veterans Advisor (David Boyle)</td><td>5778</td></tr>
@@ -149,6 +148,9 @@
             <tr><td>Production Stage (Mike Jacobs)</td><td>5779</td></tr>
             <tr><td>Residential Life</td><td>2702</td></tr>
             <tr><td>VP Enrollment Mgmt (Lisa Bunders)</td><td>5911</td></tr>
+            <tr class="importantcontact"><td>Champ Support</td></tr>
+            <tr><td>Help Desk</td><td>2710</td></tr>
+            <tr><td>Media Services</td><td>6462</td></tr>
             <tr class="importantcontact"><td>Office of International Education</td></tr>
             <tr><td>Direct Line</td><td>8450</td></tr>
             <tr><td>Elin Melchior</td><td>5842</td></tr>
