--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -51,7 +51,7 @@
             <tr><td>Hannah Kingsley</td><td>6646</td></tr> 
             <tr><td>Leah Miller</td><td>6635</td></tr>             
             <tr><td>Nadia Mitchell</td><td>6644</td></tr>
-            <tr><td>Director's Office</td><td>5740</td></tr>
+            <tr><td>Director's Office - Diane Soboski</td><td>5740</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
