--- a/index.html
+++ b/index.html
@@ -98,11 +98,18 @@
             <span style="font-size: 20px;">Dashboard</span>
           </div>
         </a>
+          <a href="https://champlainadmissions.slack.com/">
+          <div class="icon" id="slack">
+            <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
+            <span>Schedule</span>
+          </div>
+        </a>
       </div>
       <div class="news">
         <h1>Office Updates &amp; News <a href="https://goo.gl/forms/V52CgIlcoV4C9z5j1" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></h1>
         <div class="items"></div>
       </div>
+          
      
       <!-- Workday -->
     </div>
