--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
             <span style="font-size: 20px;">Dashboard</span>
           </div>
         </a>
-          <a href="https://champlainadmissions.slack.com/">
-          <div class="icon" id="slack">
-            <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
-            <span>Schedule</span>
+           <a href="https://champlainadmissions.slack.com/">
+          <div class="icon-update" id="Slack">
+            <img src="images/slack.png" alt=""> <br>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
+            <span style="font-size: 20px;">Slack/span>
           </div>
         </a>
       </div>
