--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="icon-update" id="Slack">
             <img src="images/slack.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
-            <span style="font-size: 20px;">Slack/span>
+            <span style="font-size: 20px;">Slack</span>
           </div>
         </a>
       </div>
