--- a/pages/phonelist.html
+++ b/pages/phonelist.html
@@ -33,35 +33,40 @@
         <div class="extensionsbox">
           <h1>Student Ambassadors</h1>
           <table>
+            <tr><td>Adam Decosta</td><td>(802) 752-8515</td><tr>
             <tr><td>Alana Baker</td><td>(407) 668-7473</td><tr>
             <tr><td>Alex Theodoreu</td><td>(732) 688-2055</td><tr>
             <tr><td>Bekah Airewele</td><td>(617) 320-7733</td><tr>
             <tr><td>Brennan Howell</td><td>(301) 807-1454</td><tr>
-            <tr><td>Cat Gullotta</td><td>(860) 978-4738</td><tr>
             <tr><td>Conor Tully</td><td>(817) 917-4910</td><tr>
             <tr><td>Dylan Francis</td><td>(207) 999-2341</td><tr>
             <tr><td>Dymon Guthrie</td><td>(929) 256-8726</td><tr>
             <tr><td>Emma Katz</td><td>(207) 837-4811</td><tr>
             <tr><td>Gillian English</td><td>(706) 414-6961</td><tr>
             <tr><td>Haley Smoody</td><td>(815) 979-7820</td><tr>
-            <tr><td>Ian Dupont</td><td>(802) 952-9179</td><tr>
             <tr><td>Jackie Noborikawa</td><td>(808) 454-7244</td><tr>
             <tr><td>Jessica Taylor</td><td>(315) 520-0922</td></tr>
             <tr><td>Jon Trusheim</td><td>(617) 797-4568</td></tr>
-            <tr><td>Julia Leonard</td><td>(603) 686-4643</td></tr>
-            <tr><td>Ollie Plamp</td><td>(210) 630-9984</td></tr>
-            <tr><td>Lily Lukaszevicz</td><td>(978) 808-6829</td></tr>
             <tr><td>Maddie Burgee</td><td>(240) 446-2490</td></tr>
+            <tr><td>Mariah Griffin</td><td>(802) 282-6593</td><tr>
+            <tr><td>Meghan Donovan</td><td>(603) 548-4874</td><tr>
+            <tr><td>Michael-Paul Ho-Kang-You</td><td>(617) 710-5602</td><tr>
+            <tr><td>Montse Guerra-Solano</td><td>(267) 262-2090</td><tr>
+            <tr><td>Nick Brennan</td><td>(609) 744-0459</td><tr>
+            <tr><td>Ollie Plamp</td><td>(210) 630-9984</td></tr>
             <tr><td>Quinn Kanner</td><td>(321) 427-8215</td></tr>
             <tr><td>Quinn Kerry</td><td>(518) 928-5158</td></tr>
+            <tr><td>Sammi Penza</td><td>(413) 695-4086</td></tr>
             <tr><td>Shelsea Henry</td><td>(857) 310-8937</td></tr>
+            <tr><td>Teddy Hincks</td><td>(978) 443-8248</td></tr>
+            <tr><td>Zach Phillips</td><td>(925) 451-2382</td></tr>
           </table>
         </div>
         
         <div class="extensionsbox">
           <h1>Admissions Counselors & Ops</h1>
           <table>
-            <tr><td>Diane Soboski</td><td>x 5740</td></tr>
+            <tr><td>Diane Soboski</td><td>(802) 865-5740</td></tr>
             <tr><td>Dom Cornacchia</td><td>(802) 922-6406</td></tr>
             <tr><td>Howie LeBlanco</td><td>(802) 399-8730</td></tr>
             <tr><td>Leah Miller</td><td>(860) 921-6787<td></tr>
