--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -35,10 +35,22 @@
             <span style="font-size: 20px;">Dylan</span>
           </div>
         </a>
+              <a href="https://docs.google.com/forms/d/1hcKKZ-LYDHlKHeplOh69kZjZ_epPLPpFd-O9ylvqsHI/edit?usp=sharing">
+          <div class="icon-update" id="emma_feedback">
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 20px;">Emma</span>
+          </div>
+        </a>
         <a href="https://goo.gl/forms/7BgyHmxAlZ2SeSyJ3">
           <div class="icon-update" id="maddie_feedback">
             <img src="../images/shield_white.png" alt=""> <br>
             <span style="font-size: 20px;">Maddie</span>
+          </div>
+        </a>
+        <a href="https://docs.google.com/forms/d/1m35-tMlDk9mJ9lOhys30InV-hvbcQ6M5fDUTI9qPEs0/edit?usp=sharing">
+          <div class="icon-update" id="michael_paul_feedback">
+            <img src="../images/shield_white.png" alt=""> <br>
+            <span style="font-size: 20px;">Michael-Paul</span>
           </div>
         </a>
     </div>
