--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <div class="links">
 
-        <a href="https://docs.google.com/spreadsheets/d/1YzUxks57LnKR5XtJ7lN8VzUXqNKd4ANV6aEZrtddjKI/edit#gid=0">
+        <a href="https://docs.google.com/spreadsheets/d/1CUl356E7qgsiMNAjo39zqupBJMfZhi2SueE544uHEFc/edit?usp=sharing">
           <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
