made all the icons, "icon"

--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
           </div>
         </a>
         <a href="https://www.champlain.edu/current-students">
-          <div class="icon-update" id="drive">
+          <div class="icon" id="drive">
             <img src="images/shield_white.png" alt=""> <br>
             <span style="font-size: 18px;">Current Students</span>
           </div>
         </a>
         <a href="https://my.champlain.edu/google/index/off/1/service/workday">
-          <div class="icon-update" id="workday">
+          <div class="icon" id="workday">
             <img src="images/workday.png" alt=""> <br>
             <span>Workday</span>
           </div>
         <a href="pages/feedback.html">
-          <div class="icon-update" id="feedback">
+          <div class="icon" id="feedback">
             <img src="images/feedback.png" alt=""> <br>
             <span>Office Feedback</span>
           </div>
         </a>
         <a href="https://champlainadmissions.slack.com/">
-          <div class="icon-update" id="Slack">
+          <div class="icon" id="Slack">
             <img src="images/slack.png" alt=""> <br>
             <span style="font-size: 20px;">Slack</span>
           </div>
